[package]
name = "file_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.143" 
serde_json = {version = "1.0.82", features = ["preserve_order"]} 
serde_derive = "1.0.143" 
rand = "0.8.5"